--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,9 +45,13 @@
 
 <div class="container">
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <%= if flash[:notice] %>
+      <div class="alert alert-success" role="alert"><%= notice %></div>
+  <% end %>
 
+  <%= if flash[:alert] %>
+      <div class="alert alert-danger" role="alert"><%= alert %></div>
+  <% end %>
 
   <%= yield %>
 
